Update workflow script.

--- a/.github/workflows/new-build-bottles.yml
+++ b/.github/workflows/new-build-bottles.yml
@@ -24,7 +24,11 @@ jobs:
           key: ${{ matrix.os }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
           restore-keys: ${{ matrix.os }}-rubygems-
 
-      - run: brew test-bot musl-cross
+      - run: brew test-bot --only-cleanup-before
+
+      - run: brew test-bot --only-setup
+
+      - run: brew test-bot --only-formulae musl-cross
 
       - name: Upload bottles as artifact
         uses: actions/upload-artifact@v4
