--- a/.github/workflows/new-build-bottles.yml
+++ b/.github/workflows/new-build-bottles.yml
@@ -31,6 +31,7 @@ jobs:
       - run: brew test-bot --only-formulae musl-cross
 
       - name: Upload bottles as artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: bottles_${{ matrix.os }}
